# smtp2discord

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  smtp2discord.service  smtpd.py
